--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,17 +15,18 @@ body {
 .nav {
   /*position: fixed;*/
   width: 25vw;
-  /* height: 100%; */
+  min-height: 100vh !important; 
   align-items: center;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  background-color: rgb(5, 107, 107);
+  background-color: #2A3F54;
 }
 
 .content {
   width: 65vw;
   padding: 1rem 5rem;
+  background: #ECECEC;
 }
 
 .start {
@@ -33,22 +34,26 @@ body {
   margin-bottom: 5rem;
   text-align: center;
   font-size: larger;
-  color: rgb(166, 243, 248);
+  color: #FFFFFF;
 }
 
 .input-place p {
-  color: antiquewhite;
+  color: #FFFFFF;
   font-size: larger;
+}
+input:valid {
+    min-width: 70%;
 }
 .form {
   display: flex;
   margin-top: 1rem;
   margin-bottom: 2rem;
-  height: 1.5rem;
+  height: 3rem;
+  min-width: 22vw;
 }
 .form button {
   width: 5rem;
-  background-color: yellow;
+  background-color: #3DED97;
   color: black;
   border: none;
 }
@@ -72,14 +77,13 @@ body {
   width: 7.5rem;
   height: 2.5rem;
   border: none;
-  background-color: rgb(166, 255, 0);
+  background-color: #3DED97;
   color: rgb(0, 0, 0);
 }
 
 .header {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  /*display: flex;*/
+  text-align: center;
   margin-bottom: 2rem;
 }
 .header p {
@@ -91,4 +95,7 @@ body {
 #logo {
   max-width: 15rem;
   height: auto;
+}
+h1{
+  justify-content: center;
 }
